Add housing type methods (#3)
* Get all housing types
* Create a new housing type
